--- a/OzonTestsManager/OzonTestsManager.csproj
+++ b/OzonTestsManager/OzonTestsManager.csproj
@@ -1,12 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>OzonTestsManager</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>IgorPetrov</Authors>
+    <Company>IgorPetrovcm</Company>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.58" />
-  </ItemGroup>
-
 </Project>
