--- a/OzonTestsManager/OzonTestsManager.csproj
+++ b/OzonTestsManager/OzonTestsManager.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <PackageId>OzonTestsManager</PackageId>
-    <Version>1.0.0</Version>
-    <Authors>IgorPetrov</Authors>
-    <Company>IgorPetrovcm</Company>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net8.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
 </Project>
